[gd_scene load_steps=26 format=3 uid="uid://cl5iioxhooqlv"]

[ext_resource type="Script" uid="uid://cj3ce2qxewj32" path="res://ZenvaChallenges/4. TappyPlane/Scripts/Scene/tappy_plane_game.gd" id="1_s1fyu"]
[ext_resource type="Script" uid="uid://bskglpcrtorh6" path="res://ZenvaChallenges/4. TappyPlane/Scripts/Misc/Manager/UI_manager.gd" id="2_3t2bd"]
[ext_resource type="FontFile" uid="uid://bxtgmpckqvo85" path="res://ZenvaChallenges/4. TappyPlane/Assets-TappyPlane/kenvector_future.ttf" id="2_b4ypb"]
[ext_resource type="Script" uid="uid://d8dwscye5jgt" path="res://ZenvaChallenges/4. TappyPlane/Scripts/Misc/Manager/RBplayer_manager.gd" id="3_00ruf"]
[ext_resource type="Script" uid="uid://m83kpee6axj6" path="res://ZenvaChallenges/4. TappyPlane/Scripts/Misc/Manager/ABcoin_manager.gd" id="4_27l45"]
[ext_resource type="PackedScene" uid="uid://c30q3eqsp7xno" path="res://ZenvaChallenges/4. TappyPlane/Prefabs/coin.tscn" id="5_rlson"]
[ext_resource type="Script" uid="uid://bad584haahbhp" path="res://ZenvaChallenges/4. TappyPlane/Scripts/Misc/Timers/one_shot_timer.gd" id="6_00ruf"]
[ext_resource type="Script" uid="uid://tp67u6mqqayj" path="res://ZenvaChallenges/4. TappyPlane/Scripts/Misc/Manager/ABobstacle_manager.gd" id="6_3t2bd"]
[ext_resource type="PackedScene" uid="uid://bmarys28r6sdl" path="res://ZenvaChallenges/4. TappyPlane/Prefabs/obstacle.tscn" id="7_5k550"]
[ext_resource type="Script" uid="uid://bb0v7ff3ccgee" path="res://ZenvaChallenges/4. TappyPlane/Scripts/Misc/Environment/background.gd" id="8_lir7t"]
[ext_resource type="AudioStream" uid="uid://bknvq1cvv7g75" path="res://ZenvaChallenges/4. TappyPlane/Assets-TappyPlane/CoinCollected.ogg" id="9_3t2bd"]
[ext_resource type="Texture2D" uid="uid://7pvucfpagnyy" path="res://ZenvaChallenges/4. TappyPlane/Assets-TappyPlane/Background.png" id="9_u1ril"]
[ext_resource type="Script" uid="uid://bdh8hiepdxy16" path="res://ZenvaChallenges/4. TappyPlane/Scripts/Misc/Environment/test_mode_collider.gd" id="10_chyk7"]
[ext_resource type="Script" uid="uid://c2kveymlis5c6" path="res://ZenvaChallenges/4. TappyPlane/Scripts/Misc/Timers/end_cycle_timer.gd" id="11_b4ypb"]

[sub_resource type="Animation" id="Animation_5k550"]
resource_name = "DisableStartUI"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../StartUI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rlson"]
resource_name = "EnableDeathUI"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.566667, 1.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CountDownLabel:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.333333, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeathText:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Buttons/PlayAgain:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0333333, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Buttons/PlayAgain:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0333333, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Buttons/Quit:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.0333333, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Buttons/Quit:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.0333333, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../..:dynamic_objects_speed")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1.16667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [400.0, 0.0]
}

[sub_resource type="Animation" id="Animation_lir7t"]
resource_name = "EnableStartUI"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../StartUI:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StartUI:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3t2bd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CountDownLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeathText:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Buttons/PlayAgain:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Buttons/PlayAgain:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Buttons/Quit:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Buttons/Quit:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../StartUI:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../..:dynamic_objects_speed")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [400.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../StartUI:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u1ril"]
resource_name = "coin"
length = 3.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5k550"]
_data = {
&"DisableStartUI": SubResource("Animation_5k550"),
&"EnableDeathUI": SubResource("Animation_rlson"),
&"EnableStartUI": SubResource("Animation_lir7t"),
&"RESET": SubResource("Animation_3t2bd"),
&"coin": SubResource("Animation_u1ril")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_54k8p"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxa0t"]
bg_color = Color(0.254054, 0.618108, 0.473084, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_54k8p"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_cxa0t"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_klvx2"]

[node name="Main" type="Node"]
script = ExtResource("1_s1fyu")
dynamic_objects_speed = 400.0
TEST_MODE = true
metadata/_edit_vertical_guides_ = [-803.0]

[node name="UI" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 0
offset_right = 1600.0
offset_bottom = 960.0
script = ExtResource("2_3t2bd")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="EndCycleTimer" type="Timer" parent="UI"]
wait_time = 6.0
one_shot = true
script = ExtResource("11_b4ypb")

[node name="Iterator" type="Timer" parent="UI/EndCycleTimer"]

[node name="AnimationTree" type="AnimationPlayer" parent="UI"]
root_node = NodePath("../DeathUI")
libraries = {
&"": SubResource("AnimationLibrary_5k550")
}

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -1.0
offset_bottom = 46.0
grow_horizontal = 2
scale = Vector2(1.00088, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_54k8p")
theme_override_styles/fill = SubResource("StyleBoxFlat_cxa0t")
value = 100.0
show_percentage = false

[node name="ScoreLabel" type="Label" parent="UI/HealthBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 91.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_b4ypb")
theme_override_font_sizes/font_size = 38
text = "0
"
horizontal_alignment = 1
vertical_alignment = 3

[node name="StartUI" type="Control" parent="UI"]
visible = false
z_index = 6
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartText" type="Label" parent="UI/StartUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 480.0
offset_top = 420.0
offset_right = 1080.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 58
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 18
theme_override_fonts/font = ExtResource("2_b4ypb")
theme_override_font_sizes/font_size = 70
text = "Starting in..."

[node name="RemainingStartTimeDisplay" type="Label" parent="UI/StartUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1102.0
offset_top = 441.0
offset_right = 1252.0
offset_bottom = 493.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 18
theme_override_fonts/font = ExtResource("2_b4ypb")
theme_override_font_sizes/font_size = 45
text = "3(s)"

[node name="StartTimer" type="Timer" parent="UI/StartUI"]

[node name="DeathUI" type="Control" parent="UI"]
visible = false
z_index = 6
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/DeathUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="DeathText" type="Label" parent="UI/DeathUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -154.0
offset_right = 285.5
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_b4ypb")
theme_override_font_sizes/font_size = 70
text = "Game Over..."
uppercase = true

[node name="CountDownLabel" type="Label" parent="UI/DeathUI"]
layout_mode = 0
offset_left = 785.0
offset_top = 639.0
offset_right = 825.0
offset_bottom = 691.0
theme_override_fonts/font = ExtResource("2_b4ypb")
theme_override_font_sizes/font_size = 45
text = "5"

[node name="Camera2D" type="Camera2D" parent="UI"]
position = Vector2(800, 482)

[node name="Buttons" type="Control" parent="UI"]
z_index = 7
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayAgain" type="Button" parent="UI/Buttons"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 613.0
offset_top = 436.0
offset_right = 947.0
offset_bottom = 496.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_b4ypb")
theme_override_font_sizes/font_size = 45
disabled = true
text = "Play Again"

[node name="Quit" type="Button" parent="UI/Buttons"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 613.0
offset_top = 546.0
offset_right = 947.0
offset_bottom = 606.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_b4ypb")
theme_override_font_sizes/font_size = 45
disabled = true
text = "Quit?"

[node name="Continue" type="Button" parent="UI/Buttons"]
process_mode = 3
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 613.0
offset_top = 436.0
offset_right = 947.0
offset_bottom = 496.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_b4ypb")
theme_override_font_sizes/font_size = 45
disabled = true
text = "Continue?"

[node name="PlayerManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_00ruf")

[node name="CoinManager" type="Node" parent="."]
script = ExtResource("4_27l45")
coin = ExtResource("5_rlson")

[node name="CoinCollectAudio" type="AudioStreamPlayer" parent="CoinManager"]
stream = ExtResource("9_3t2bd")

[node name="CoinTimer" type="Timer" parent="CoinManager"]
wait_time = 1.725
script = ExtResource("6_00ruf")

[node name="StartDelay" type="Timer" parent="CoinManager/CoinTimer"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="ObstacleManager" type="Node" parent="."]
script = ExtResource("6_3t2bd")
obstacle = ExtResource("7_5k550")

[node name="ObstaclesTimer" type="Timer" parent="ObstacleManager"]
wait_time = 1.5
script = ExtResource("6_00ruf")

[node name="StartDelay" type="Timer" parent="ObstacleManager/ObstaclesTimer"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Background" type="Node2D" parent="." groups=["DynamicObjects"]]
modulate = Color(0.795518, 0.811739, 0.789505, 1)
z_index = -1
scale = Vector2(2, 2)
script = ExtResource("8_lir7t")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Backdrop1" type="Sprite2D" parent="Background"]
position = Vector2(400, 240)
texture = ExtResource("9_u1ril")

[node name="Backdrop2" type="Sprite2D" parent="Background"]
position = Vector2(1199, 240)
texture = ExtResource("9_u1ril")

[node name="Backdrop3" type="Sprite2D" parent="Background"]
position = Vector2(1998, 240)
texture = ExtResource("9_u1ril")

[node name="Ceiling" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Ceiling"]
position = Vector2(0, 65)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling/StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_54k8p")

[node name="KillZone" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="KillZone"]
position = Vector2(0, 1054)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone/Area2D"]
shape = SubResource("WorldBoundaryShape2D_cxa0t")

[node name="Testing Barrier" type="StaticBody2D" parent="."]
position = Vector2(0, 575)
script = ExtResource("10_chyk7")

[node name="TestingMode" type="CollisionShape2D" parent="Testing Barrier"]
shape = SubResource("WorldBoundaryShape2D_klvx2")

[connection signal="start_game" from="UI" to="." method="_on_ui_start_game"]
[connection signal="timeout" from="UI/EndCycleTimer" to="." method="_on_end_cycle_timer_timeout"]
[connection signal="timeout" from="UI/EndCycleTimer/Iterator" to="UI" method="_on_iterator_timeout"]
[connection signal="tree_exiting" from="UI/StartUI" to="." method="_on_start_ui_tree_exiting"]
[connection signal="timeout" from="UI/StartUI/StartTimer" to="UI" method="_on_start_timer_timeout"]
[connection signal="pressed" from="UI/Buttons/PlayAgain" to="UI" method="_on_play_again_pressed"]
[connection signal="pressed" from="UI/Buttons/Quit" to="UI" method="_on_quit_pressed"]
[connection signal="pressed" from="UI/Buttons/Continue" to="." method="_on_continue_pressed"]
[connection signal="child_exiting_tree" from="PlayerManager" to="." method="_on_player_manager_child_exiting_tree"]
[connection signal="player_boosting" from="PlayerManager" to="." method="_on_boosting"]
[connection signal="player_killed" from="PlayerManager" to="UI" method="_on_player_killed"]
[connection signal="player_killed" from="PlayerManager" to="UI/EndCycleTimer" method="_on_player_manager_player_killed"]
[connection signal="player_spawn" from="PlayerManager" to="UI" method="_on_player_spawn"]
[connection signal="coin_collected" from="CoinManager" to="." method="_on_coin_collected"]
[connection signal="timeout" from="CoinManager/CoinTimer" to="CoinManager" method="_on_coin_timer_timeout"]
[connection signal="timeout" from="CoinManager/CoinTimer/StartDelay" to="CoinManager/CoinTimer" method="_on_one_shot_timeout"]
[connection signal="timeout" from="ObstacleManager/ObstaclesTimer" to="ObstacleManager" method="_on_obstacles_timer_timeout"]
[connection signal="timeout" from="ObstacleManager/ObstaclesTimer/StartDelay" to="ObstacleManager/ObstaclesTimer" method="_on_one_shot_timeout"]
[connection signal="body_entered" from="KillZone/Area2D" to="." method="_on_area_2d_body_entered"]
